<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_sign_up_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/header_sign_up"
        style="@style/headerText"
        android:layout_margin="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputEditText"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/txt_header"
        android:layout_marginTop="@dimen/dimens_40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputEditText"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputEditText"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_up_cta"
        style="@style/regularText"
        android:padding="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ctaButtonStyle"
        android:text="@string/sign_up"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        android:id="@+id/layout_loader"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>